force-app/main/default/objects/BPM_Aging_History__c/BPM_Aging_History__c.object-meta.xml
<CustomObject>
    <description>Historical Tracking Object for BPM Records</description>
    <label>BPM Aging History</label>
    <nameField>
        <displayFormat>AH-{000}</displayFormat>
        <label>BPM Aging History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BPM Aging Histories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>