force-app/main/default/objects/BPM_Aging_History__c/fields/Action_Owner__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner__c</fullName>
    <description>It will store the action owner name based on hold reason type on contract.</description>
    <label>Action Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>