force-app/main/default/objects/BPM_Aging_History__c/fields/Action_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner_Role__c</fullName>
    <label>Action Owner Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>