force-app/main/default/objects/BPM_Aging_History__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>Alert Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA Hold</fullName>
            </value>
            <value>
                <fullName>CA Expiration</fullName>
            </value>
            <value>
                <fullName>CA Customer Approval</fullName>
            </value>
            <value>
                <fullName>CA No PO</fullName>
            </value>
            <value>
                <fullName>Interface Date Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>