force-app/main/default/objects/BPM_Aging_History__c/fields/BPM_Annuity__c.field-meta.xml
<CustomField>
    <fullName>BPM_Annuity__c</fullName>
    <label>BPM Annuity</label>
    <referenceTo>BPM_Annuity__c</referenceTo>
    <relationshipLabel>BPM Aging Histories</relationshipLabel>
    <relationshipName>BPM_Aging_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>