force-app/main/default/objects/BPM_Aging_History__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>This will store the contract number from BPM Annuity Object to which it is related to</description>
    <label>Contract Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>