force-app/main/default/objects/BPM_Aging_History__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>This will store the customer name from BPM Annuity Object to which it is related to.</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>