force-app/main/default/objects/BPM_Aging_History__c/fields/Customer_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Customer_Nbr__c</fullName>
    <label>Customer Nbr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>