force-app/main/default/objects/BPM_Aging_History__c/fields/Full_Contract_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Full_Contract_Nbr__c</fullName>
    <label>Full Contract Nbr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>