force-app/main/default/objects/BPM_Aging_History__c/fields/Hold_Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason_Type__c</fullName>
    <description>It will store the hold reason type.</description>
    <label>Hold Reason Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>