force-app/main/default/objects/BPM_Aging_History__c/fields/Hold_Reason_Type_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason_Type_End_Date__c</fullName>
    <description>It will store the hold reason type end date if hold reason type on bpm annuity changes to any other hold reason.</description>
    <label>Hold Reason Type End Date</label>
    <type>Date</type>
</CustomField>