force-app/main/default/objects/BPM_Aging_History__c/fields/Hold_Reason_Type_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason_Type_Start_Date__c</fullName>
    <description>It will store the hold reason type start date when a bpm annuity object has some hold reason type.</description>
    <label>Hold Reason Type Start Date</label>
    <type>Date</type>
</CustomField>