force-app/main/default/objects/BPM_Aging_History__c/fields/Manager2_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager2_Name__c</fullName>
    <label>Manager2 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>