force-app/main/default/objects/BPM_Aging_History__c/fields/Number_of_Hold_Reason_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hold_Reason_Days__c</fullName>
    <description>It will store difference between hold reason start date and hold reason end date.</description>
    <formula>IF(ISNULL(Hold_Reason_Type_End_Date__c),today()- Hold_Reason_Type_Start_Date__c,Hold_Reason_Type_End_Date__c-Hold_Reason_Type_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Hold Reason Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>