force-app/main/default/objects/BPM_Aging_History__c/fields/Total_Aging_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Aging_Days__c</fullName>
    <label>Total Aging History</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>